--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,453 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+html {
+  max-width: 1512px;
+  margin: 0 auto;
+}
+html p {
+  font-size: 16px;
+}
+
+.allPages {
+  padding: 50px;
+}
+
+#search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  overflow: hidden;
+}
+#search-container .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo img {
+  height: 37px;
+  margin-right: 30px;
+}
+
+#search-container input[type=text] {
+  padding: 10px;
+  border-radius: 5px 0 0 5px;
+  border: 1px solid gray;
+  border-right: none;
+  outline: none;
+  text-indent: 20px;
+  border-left: 1px solid #ccc;
+}
+
+.searchLogo {
+  position: absolute;
+  left: 140px;
+  top: 1px;
+  width: 16px;
+}
+
+.redBtn {
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 38px;
+  height: 38px;
+  border-radius: 0 10px 10px 0;
+  background-image: url(../accets/images/navMenu/buttonSearch.svg);
+  background-repeat: no-repeat;
+}
+
+.extra-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#search-container .extra-links a,
+#search-container .extra-links button {
+  margin-left: 15px;
+  text-decoration: none;
+  color: #333;
+}
+
+#search-container .extra-links button {
+  background-color: #009688;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 25px;
+}
+
+#content-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 10% 20px 0px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+#content-block .text {
+  flex: 1;
+}
+
+#content-block .text h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+#content-block .text p {
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+#content-block .text button {
+  background-color: #009688;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 25px;
+  font-size: 1rem;
+}
+
+#content-block .image img {
+  width: 100%;
+  max-width: 400px;
+}
+
+.heading2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.siteLeft {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.siteRight {
+  color: #00798a;
+  margin: 10px;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 350px;
+  gap: 20px;
+  margin-bottom: 5%;
+}
+
+.card {
+  max-width: 300px;
+  position: relative;
+}
+
+.cards img {
+  width: 100%;
+}
+
+.card h3 {
+  padding: 7px;
+}
+
+.card p {
+  padding: 7px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.goindAndFree {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.data::before {
+  content: url(../accets/images/ivents/calendar.svg);
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.going::before {
+  content: url(../accets/images/ivents/okey.svg);
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.free::before {
+  content: url(../accets/images/ivents/ticket.svg);
+  vertical-align: middle;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.bussines {
+  color: #707070;
+  opacity: 70%;
+}
+
+#meetup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(151, 202, 209, 0.0784313725);
+  margin-bottom: 4%;
+}
+
+.content-meetup {
+  max-width: 800px;
+}
+
+.meetupText {
+  margin-bottom: 16px;
+}
+
+.content-meetup button {
+  width: 192px;
+  height: 40px;
+  background-color: #e32359;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+#exploreTopCategories h2 {
+  margin-bottom: 24px;
+}
+
+#allCategories {
+  display: flex;
+  justify-content: space-between;
+  max-height: 400px;
+  flex-wrap: wrap;
+}
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 112px;
+  width: 135px;
+  background-color: rgba(151, 202, 209, 0.0784313725);
+  margin-bottom: 4%;
+}
+
+#citiesOnMeetup p {
+  margin: 16px 0 16px 0;
+  opacity: 70%;
+  color: #707070;
+}
+
+.cities {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  flex-wrap: wrap;
+  margin-bottom: 64px;
+}
+
+.city h4 {
+  margin-top: 24px;
+}
+
+#meetupWorks {
+  margin-bottom: 64px;
+}
+
+#meetupWorks h2 {
+  margin: 0 0 16px 0;
+}
+
+.works,
+.groups {
+  display: flex;
+  width: 100%;
+}
+
+.works {
+  gap: 50px;
+}
+
+.image,
+.worksContent {
+  padding: 20px;
+}
+
+.worksContent {
+  max-width: 379px;
+}
+
+.groups {
+  background-color: rgba(151, 202, 209, 0.0784313725);
+}
+
+.worksContent h4 {
+  margin-bottom: 16px;
+}
+
+.worksContent p {
+  margin-bottom: 16px;
+}
+
+.styleText {
+  font-weight: 500;
+  font-size: 16px;
+  color: #00798a;
+}
+
+#friendships {
+  margin-bottom: 53px;
+}
+
+#friendships h2 {
+  margin-bottom: 16px;
+}
+
+.friendshipsText {
+  color: #707070;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 16px;
+}
+
+.gridFriendships {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 20px;
+}
+
+.gridFriendships img {
+  width: 100%;
+}
+
+.gridFriendships h4 {
+  margin-bottom: 12px;
+}
+
+.readMoreText {
+  color: #00798a;
+}
+
+#footer {
+  background-color: #1c1c1c;
+  color: #ffffff;
+  padding: 3% 7% 3% 7%;
+}
+
+.footerHead {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #707070;
+  gap: 10px;
+  width: 100%;
+}
+
+.footerHead p {
+  font-size: 16px;
+}
+
+.footerHead button {
+  border-radius: 6px;
+  border: 2px solid #ffffff;
+  color: #ffffff;
+  background-color: transparent;
+  padding: 10px 25px 10px 14px;
+}
+
+.footers-columns {
+  display: flex;
+  gap: 25%;
+  align-items: start;
+  flex-wrap: wrap;
+  margin: 20px 0 20px 0;
+}
+
+.footer-column {
+  margin-bottom: 20px;
+}
+
+.footer-column h4 {
+  margin-bottom: 10px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-column ul li {
+  margin-bottom: 8px;
+}
+
+.footer-column ul li a {
+  color: #c5c4c4;
+  text-decoration: none;
+}
+
+.follow {
+  margin-top: 20px;
+}
+
+.follow h4 {
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.containerImages {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  gap: 40px;
+}
+
+.leftSiteFooter img,
+.rightSiteFooter img {
+  cursor: pointer;
+}
+
+.legal {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.legal p {
+  margin: 0 10px;
+}
+
+.legal a {
+  color: #c5c4c4;
+  text-decoration: none;
+  margin: 0 10px;
+  font-size: 14px;
+}/*# sourceMappingURL=style.css.map */
