--- a/styles/style.css
+++ b/styles/style.css
@@ -72,8 +72,8 @@ html p {
   align-items: center;
 }
 
-#search-container .extra-links a,
-#search-container .extra-links button {
+.extra-links a,
+.extra-links button {
   margin-left: 15px;
   text-decoration: none;
   color: #333;
@@ -96,34 +96,30 @@ html p {
   background-color: white;
   border-radius: 10px;
 }
-
-#content-block .text {
-  flex: 1;
+#content-block .image img {
+  width: 100%;
+  max-width: 400px;
 }
 
-#content-block .text h1 {
+.text {
+  flex: 1;
+}
+.text h1 {
   font-size: 2rem;
   margin-bottom: 20px;
 }
-
-#content-block .text p {
+.text p {
   font-size: 1rem;
   margin-bottom: 20px;
 }
-
-#content-block .text button {
-  background-color: #009688;
+.text button {
+  background-color: #00798a;
   border: none;
   color: white;
   padding: 10px 20px;
   cursor: pointer;
-  border-radius: 25px;
+  border-radius: 8px;
   font-size: 1rem;
-}
-
-#content-block .image img {
-  width: 100%;
-  max-width: 400px;
 }
 
 .heading2 {
@@ -152,20 +148,17 @@ html p {
   gap: 20px;
   margin-bottom: 5%;
 }
+.cards img {
+  width: 100%;
+}
 
 .card {
   max-width: 300px;
   position: relative;
 }
-
-.cards img {
-  width: 100%;
-}
-
 .card h3 {
   padding: 7px;
 }
-
 .card p {
   padding: 7px;
   font-size: 14px;
@@ -215,11 +208,6 @@ html p {
 .content-meetup {
   max-width: 800px;
 }
-
-.meetupText {
-  margin-bottom: 16px;
-}
-
 .content-meetup button {
   width: 192px;
   height: 40px;
@@ -227,6 +215,10 @@ html p {
   color: white;
   border: none;
   border-radius: 5px;
+}
+
+.meetupText {
+  margin-bottom: 16px;
 }
 
 #exploreTopCategories h2 {
@@ -265,15 +257,13 @@ html p {
   flex-wrap: wrap;
   margin-bottom: 64px;
 }
-
-.city h4 {
+.cities h4 {
   margin-top: 24px;
 }
 
 #meetupWorks {
   margin-bottom: 64px;
 }
-
 #meetupWorks h2 {
   margin: 0 0 16px 0;
 }
@@ -296,17 +286,15 @@ html p {
 .worksContent {
   max-width: 379px;
 }
-
-.groups {
-  background-color: rgba(151, 202, 209, 0.0784313725);
-}
-
 .worksContent h4 {
   margin-bottom: 16px;
 }
-
 .worksContent p {
   margin-bottom: 16px;
+}
+
+.groups {
+  background-color: rgba(151, 202, 209, 0.0784313725);
 }
 
 .styleText {
@@ -318,7 +306,6 @@ html p {
 #friendships {
   margin-bottom: 53px;
 }
-
 #friendships h2 {
   margin-bottom: 16px;
 }
@@ -336,13 +323,11 @@ html p {
   grid-template-rows: 1fr;
   gap: 20px;
 }
-
 .gridFriendships img {
   width: 100%;
 }
-
 .gridFriendships h4 {
-  margin-bottom: 12px;
+  margin: 10px 0 15px 0;
 }
 
 .readMoreText {
@@ -365,11 +350,6 @@ html p {
   gap: 10px;
   width: 100%;
 }
-
-.footerHead p {
-  font-size: 16px;
-}
-
 .footerHead button {
   border-radius: 6px;
   border: 2px solid #ffffff;
@@ -389,23 +369,19 @@ html p {
 .footer-column {
   margin-bottom: 20px;
 }
-
 .footer-column h4 {
   margin-bottom: 10px;
   font-size: 16px;
   font-weight: 400;
 }
-
 .footer-column ul {
   list-style: none;
   padding: 0;
 }
-
-.footer-column ul li {
+.footer-column li {
   margin-bottom: 8px;
 }
-
-.footer-column ul li a {
+.footer-column a {
   color: #c5c4c4;
   text-decoration: none;
 }
@@ -413,7 +389,6 @@ html p {
 .follow {
   margin-top: 20px;
 }
-
 .follow h4 {
   margin-bottom: 10px;
   font-size: 14px;
@@ -440,11 +415,9 @@ html p {
   flex-wrap: wrap;
   align-items: center;
 }
-
 .legal p {
   margin: 0 10px;
 }
-
 .legal a {
   color: #c5c4c4;
   text-decoration: none;
