--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import "variables";
 
 * {
   margin: 0;
@@ -71,8 +72,8 @@ html {
   justify-content: center;
   align-items: center;
 }
-#search-container .extra-links a,
-#search-container .extra-links button {
+.extra-links a,
+.extra-links button {
   margin-left: 15px;
   text-decoration: none;
   color: #333;
@@ -94,31 +95,32 @@ html {
   padding: 20px 10% 20px 0px;
   background-color: white;
   border-radius: 10px;
+  .image img {
+    width: 100%;
+    max-width: 400px;
+  }
 }
-#content-block .text {
+.text {
   flex: 1;
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+  button {
+    background-color: #00798a;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    font-size: 1rem;
+  }
 }
-#content-block .text h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-#content-block .text p {
-  font-size: 1rem;
-  margin-bottom: 20px;
-}
-#content-block .text button {
-  background-color: #009688;
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 25px;
-  font-size: 1rem;
-}
-#content-block .image img {
-  width: 100%;
-  max-width: 400px;
-}
+
 // ======
 .heading2 {
   display: flex;
@@ -144,21 +146,21 @@ html {
   grid-template-rows: 350px;
   gap: 20px;
   margin-bottom: 5%;
+  img {
+    width: 100%;
+  }
 }
 .card {
   max-width: 300px;
   position: relative;
-}
-.cards img {
-  width: 100%;
-}
-.card h3 {
-  padding: 7px;
-}
-.card p {
-  padding: 7px;
-  font-size: 14px;
-  font-weight: 400;
+  h3 {
+    padding: 7px;
+  }
+  p {
+    padding: 7px;
+    font-size: 14px;
+    font-weight: 400;
+  }
 }
 .goindAndFree {
   display: flex;
@@ -192,18 +194,19 @@ html {
 }
 .content-meetup {
   max-width: 800px;
+  button {
+    width: 192px;
+    height: 40px;
+    background-color: #e32359;
+    color: white;
+    border: none;
+    border-radius: 5px;
+  }
 }
 .meetupText {
   margin-bottom: 16px;
 }
-.content-meetup button {
-  width: 192px;
-  height: 40px;
-  background-color: #e32359;
-  color: white;
-  border: none;
-  border-radius: 5px;
-}
+
 // =================================================
 #exploreTopCategories h2 {
   margin-bottom: 24px;
@@ -238,16 +241,17 @@ html {
   text-align: center;
   flex-wrap: wrap;
   margin-bottom: 64px;
+  h4 {
+    margin-top: 24px;
+  }
 }
-.city h4 {
-  margin-top: 24px;
-}
+
 // =================================================
 #meetupWorks {
   margin-bottom: 64px;
-}
-#meetupWorks h2 {
-  margin: 0 0 16px 0;
+  h2 {
+    margin: 0 0 16px 0;
+  }
 }
 .works,
 .groups {
@@ -263,19 +267,16 @@ html {
 }
 .worksContent {
   max-width: 379px;
+  h4 {
+    margin-bottom: 16px;
+  }
+  p {
+    margin-bottom: 16px;
+  }
 }
 .groups {
   background-color: #97cad114;
-  // max-width: 580px;
-  // max-height: 180px;
 }
-.worksContent h4 {
-  margin-bottom: 16px;
-}
-.worksContent p {
-  margin-bottom: 16px;
-}
-
 .styleText {
   font-weight: 500;
   font-size: 16px;
@@ -284,9 +285,9 @@ html {
 // =================================================
 #friendships {
   margin-bottom: 53px;
-}
-#friendships h2 {
-  margin-bottom: 16px;
+  h2 {
+    margin-bottom: 16px;
+  }
 }
 .friendshipsText {
   color: #707070;
@@ -299,12 +300,12 @@ html {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   gap: 20px;
-}
-.gridFriendships img {
-  width: 100%;
-}
-.gridFriendships h4 {
-  margin-bottom: 12px;
+  img {
+    width: 100%;
+  }
+  h4 {
+    margin: 10px 0 15px 0;
+  }
 }
 .readMoreText {
   color: #00798a;
@@ -325,23 +326,17 @@ html {
   justify-content: start;
   padding-bottom: 20px;
   border-bottom: 1px solid #707070;
-
   gap: 10px;
   width: 100%;
-}
 
-.footerHead p {
-  font-size: 16px;
+  button {
+    border-radius: 6px;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    background-color: transparent;
+    padding: 10px 25px 10px 14px;
+  }
 }
-
-.footerHead button {
-  border-radius: 6px;
-  border: 2px solid #ffffff;
-  color: #ffffff;
-  background-color: transparent;
-  padding: 10px 25px 10px 14px;
-}
-
 .footers-columns {
   display: flex;
   gap: 25%;
@@ -352,38 +347,32 @@ html {
 
 .footer-column {
   margin-bottom: 20px;
-}
-
-.footer-column h4 {
-  margin-bottom: 10px;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-.footer-column ul {
-  list-style: none;
-  padding: 0;
-}
-
-.footer-column ul li {
-  margin-bottom: 8px;
-}
-
-.footer-column ul li a {
-  color: #c5c4c4;
-  text-decoration: none;
+  h4 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  li {
+    margin-bottom: 8px;
+  }
+  a {
+    color: #c5c4c4;
+    text-decoration: none;
+  }
 }
 
 .follow {
   margin-top: 20px;
+  h4 {
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 400;
+  }
 }
-
-.follow h4 {
-  margin-bottom: 10px;
-  font-size: 14px;
-  font-weight: 400;
-}
-
 .containerImages {
   display: flex;
   justify-content: space-between;
@@ -403,15 +392,13 @@ html {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-}
-
-.legal p {
-  margin: 0 10px;
-}
-
-.legal a {
-  color: #c5c4c4;
-  text-decoration: none;
-  margin: 0 10px;
-  font-size: 14px;
+  p {
+    margin: 0 10px;
+  }
+  a {
+    color: #c5c4c4;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 14px;
+  }
 }
