--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -1,1 +1,316 @@
 @import "mixins";
+@import "variables";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+html {
+  max-width: 1512px;
+  margin: 0 auto;
+  p {
+    font-size: 16px;
+  }
+}
+
+#search-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  position: relative;
+  overflow: hidden;
+  margin: 20px;
+
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .logo img {
+    height: 37px;
+    margin-right: 30px;
+  }
+}
+
+#search-container input[type="text"] {
+  padding: 10px;
+  border-radius: 5px 0 0 5px;
+  border: 1px solid gray;
+  border-right: none;
+  outline: none;
+  text-indent: 20px;
+  border-left: 1px solid #ccc;
+}
+
+.searchLogo {
+  position: absolute;
+  left: 140px;
+  top: 1px;
+  width: 16px;
+}
+
+.redBtn {
+  background-color: #f44336;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  width: 38px;
+  height: 38px;
+  border-radius: 0 10px 10px 0;
+  background-image: url(../accets/images/navMenu/buttonSearch.svg);
+  background-repeat: no-repeat;
+}
+
+#search-container .extra-links a,
+#search-container .extra-links button {
+  margin-left: 15px;
+  text-decoration: none;
+  color: #333;
+}
+#search-container .extra-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  button {
+    background-color: #009688;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 25px;
+  }
+}
+
+.filter-container {
+  display: flex;
+  gap: 10px;
+}
+.filter {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+//========================================================================================
+
+.eventsMainTopRight {
+  h4 {
+    margin-bottom: 14px;
+  }
+}
+.eventsMainTopContainer {
+  margin: 77px 158px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 18px;
+}
+#eventsPageEventsHeader {
+  color: #00798a;
+  font-weight: 500;
+  margin: 16px 0 12px 0;
+  text-decoration: underline;
+}
+.container {
+  padding: 20px;
+  max-width: 55%;
+  h1 {
+    font-size: 24px;
+  }
+}
+.filters {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.dropdown {
+  position: relative;
+}
+.dropdown-toggle {
+  padding: 10px;
+  border: none;
+  font-weight: 500;
+  border-radius: 40px;
+  background-color: #f6f7f8;
+  cursor: pointer;
+  &::after {
+    content: url(../accets/images/afterFilter.svg);
+    vertical-align: middle;
+    margin-left: 13px;
+  }
+}
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+
+  background-color: rgba(255, 255, 255, 0.945);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  li {
+    padding: 10px;
+    cursor: pointer;
+  }
+  &:hover {
+    background-color: #f1f1f1;
+  }
+}
+.selected {
+  background-color: #c2c2c2;
+  color: white;
+}
+.events {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.event {
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  max-width: 100%;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  img {
+    max-width: 160px;
+    max-height: 105px;
+    border-radius: 5px;
+  }
+}
+.event-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: 10px;
+}
+.event-date {
+  color: #7c6f50;
+  font-weight: 500;
+}
+.event-category,
+.event-attendees {
+  color: #707070;
+}
+.event-attendees {
+  margin-top: 20px;
+}
+.online-event {
+  position: relative;
+}
+
+.online-event::before {
+  @include iconInlineAlign();
+  content: url(../accets/images/onlineEventSvg.svg) "Online Event";
+  position: absolute;
+  background: rgb(255, 255, 255);
+  color: #707070;
+  margin: 5px;
+  text-align: center;
+  font-size: 0.8em;
+  border-radius: 3px;
+}
+// ==========================================
+
+#footer {
+  background-color: #1c1c1c;
+  color: #ffffff;
+  padding: 3% 7% 3% 7%;
+  // text-align: center;\
+}
+
+.footerHead {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #707070;
+  gap: 10px;
+  width: 100%;
+  p {
+    font-size: 16px;
+  }
+  button {
+    border-radius: 6px;
+    border: 2px solid #ffffff;
+    color: #ffffff;
+    background-color: transparent;
+    padding: 10px 25px 10px 14px;
+  }
+}
+.footers-columns {
+  display: flex;
+  gap: 25%;
+  align-items: start;
+  flex-wrap: wrap;
+  margin: 20px 0 20px 0;
+}
+
+.footer-column {
+  margin-bottom: 20px;
+  h4 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 400;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+  }
+  li {
+    margin-bottom: 8px;
+  }
+  a {
+    color: #c5c4c4;
+    text-decoration: none;
+  }
+}
+
+.follow {
+  margin-top: 20px;
+  h4 {
+    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 400;
+  }
+}
+.containerImages {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  gap: 40px;
+}
+
+.leftSiteFooter img,
+.rightSiteFooter img {
+  cursor: pointer;
+}
+
+.legal {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  p {
+    margin: 0 10px;
+  }
+  a {
+    color: #c5c4c4;
+    text-decoration: none;
+    margin: 0 10px;
+    font-size: 14px;
+  }
+}
