--- a/styles/style.css
+++ b/styles/style.css
@@ -24,14 +24,14 @@ html p {
   flex-wrap: wrap;
   position: relative;
   overflow: hidden;
+  margin: 20px;
 }
 #search-container .logo {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-.logo img {
+#search-container .logo img {
   height: 37px;
   margin-right: 30px;
 }
@@ -66,19 +66,18 @@ html p {
   background-repeat: no-repeat;
 }
 
-.extra-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.extra-links a,
-.extra-links button {
+#search-container .extra-links a,
+#search-container .extra-links button {
   margin-left: 15px;
   text-decoration: none;
   color: #333;
 }
 
+#search-container .extra-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #search-container .extra-links button {
   background-color: #009688;
   border: none;
@@ -90,8 +89,8 @@ html p {
 
 #content-block {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   padding: 20px 10% 20px 0px;
   background-color: white;
   border-radius: 10px;
@@ -234,9 +233,9 @@ html p {
 
 .categories {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   text-align: center;
   height: 112px;
   width: 135px;
@@ -253,7 +252,7 @@ html p {
 .cities {
   display: flex;
   justify-content: space-between;
-  text-align: center;
+  align-items: center;
   flex-wrap: wrap;
   margin-bottom: 64px;
 }
@@ -342,13 +341,16 @@ html p {
 
 .footerHead {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: start;
+  align-items: center;
+  flex-direction: row;
   padding-bottom: 20px;
   border-bottom: 1px solid #707070;
   gap: 10px;
   width: 100%;
+}
+.footerHead p {
+  font-size: 16px;
 }
 .footerHead button {
   border-radius: 6px;
@@ -360,8 +362,8 @@ html p {
 
 .footers-columns {
   display: flex;
+  align-items: center;
   gap: 25%;
-  align-items: start;
   flex-wrap: wrap;
   margin: 20px 0 20px 0;
 }
@@ -410,10 +412,10 @@ html p {
 }
 
 .legal {
-  margin-top: 20px;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
+  margin-top: 20px;
+  flex-wrap: wrap;
 }
 .legal p {
   margin: 0 10px;
