--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -173,6 +173,7 @@ html {
   border-left: none;
   border-right: none;
   border-bottom: none;
+  border-radius: initial;
   img {
     max-width: 160px;
     max-height: 105px;
@@ -209,7 +210,7 @@ html {
   font-size: 0.8em;
   border-radius: 3px;
 }
-//========================= fOOTER =========================
+//========================= FOOTER =========================
 
 #footer {
   background-color: #1c1c1c;
