--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 $colorWhite: white;
 $colorHex: #00798a;
 $block-margin-bottom: 16px;
+$container-margin-bottom: 64px;
 $border-none: none;
 $text-size: 14px;
 $text-size-up: 16px;
