Добавлена переменная display-none

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,5 +3,6 @@ $colorHex: #00798a;
 $block-margin-bottom: 16px;
 $container-margin-bottom: 64px;
 $border-none: none;
+$display-none: none;
 $text-size: 14px;
 $text-size-up: 16px;
