--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,14 +22,14 @@ html {
 //========================= NAV MENU =========================
 
 #search-container {
-  @include displayFlex2(space-between, center);
-  flex-wrap: wrap;
+  @include displayFlex3(space-between, center, row);
+  // flex-wrap: wrap;
   position: relative;
   overflow: hidden;
   margin: 20px;
 
   .logo {
-    @include displayFlex2(center, center);
+    @include displayFlex3(center, center, row);
   }
   .logo img {
     height: 37px;
@@ -69,20 +69,23 @@ html {
 
 #search-container .extra-links a,
 #search-container .extra-links button {
-  margin-left: 15px;
+  margin-left: 7px;
   text-decoration: none;
   color: #333;
 }
 #search-container .extra-links {
   @include displayFlex2(center, center);
   button {
-    background-color: #009688;
+    background-color: #00798a;
     border: $border-none;
     color: $colorWhite;
     padding: 10px 20px;
     cursor: pointer;
-    border-radius: 25px;
+    border-radius: 8px;
   }
+}
+#navSearchFormSmall {
+  display: $display-none;
 }
 
 //========================= JOIN MEETUP =========================
@@ -100,7 +103,7 @@ html {
 .text {
   flex: 1;
   h1 {
-    font-size: 2rem;
+    font-weight: 700;
     margin-bottom: 20px;
   }
   p {
@@ -150,6 +153,7 @@ html {
   max-width: 300px;
   position: relative;
   h3 {
+    font-weight: 600;
     padding: 7px;
   }
   p {
@@ -201,9 +205,13 @@ html {
 }
 
 //========================= CATEGORIES =========================
-#exploreTopCategories h2 {
-  margin-bottom: 24px;
+#exploreTopCategories {
+  margin-bottom: $container-margin-bottom;
+  h2 {
+    margin-bottom: 24px;
+  }
 }
+
 #allCategories {
   display: flex;
   justify-content: space-between;
@@ -229,7 +237,7 @@ html {
 .cities {
   @include displayFlex2(space-between, center);
   flex-wrap: wrap;
-  margin-bottom: 64px;
+  margin-bottom: $container-margin-bottom;
   h4 {
     margin-top: 24px;
   }
@@ -238,7 +246,7 @@ html {
 //========================= MEETUP WORKS =========================
 
 #meetupWorks {
-  margin-bottom: 64px;
+  margin-bottom: $container-margin-bottom;
   h2 {
     margin: 0 0 16px 0;
   }
@@ -330,7 +338,7 @@ html {
   }
 }
 .footers-columns {
-  @include flexAlign(center);
+  @include flexAlign(start);
   gap: 25%;
   flex-wrap: wrap;
   margin: 20px 0 20px 0;
@@ -388,5 +396,362 @@ html {
     text-decoration: none;
     margin: 0 10px;
     font-size: $text-size;
+  }
+}
+
+//========================= MEDIA =========================
+
+//========================= 1200px =========================
+
+@media screen and (max-width: 1200px) {
+  h1 {
+    font-weight: 600;
+  }
+  h2 {
+    font-weight: 600;
+  }
+  h3 {
+    font-weight: 500;
+  }
+
+  .cards {
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+  }
+
+  .categories {
+    max-width: 110px;
+    height: 80px;
+  }
+  #citiesOnMeetup {
+    .cities {
+      text-align: center;
+      img {
+        max-width: 200px;
+      }
+    }
+  }
+  .text {
+    h1 {
+      font-size: 1.5rem;
+      p {
+        font-size: 0.875rem;
+      }
+      button {
+        font-size: 0.875rem;
+        padding: 8px 16px;
+      }
+    }
+  }
+
+  .content-meetup {
+    padding: 50px;
+  }
+  .cities {
+    img {
+      width: 154px;
+      height: 154px;
+    }
+  }
+  .groups {
+    max-width: 100%;
+  }
+
+  .footer-column {
+    max-width: 150px;
+  }
+}
+
+//========================= 1024px =========================
+
+@media screen and (max-width: 1024px) {
+  .extra-links {
+    .english {
+      display: $display-none;
+    }
+  }
+
+  .heading2 img {
+    max-width: 200px;
+  }
+
+  #meetup {
+    content-meetup {
+      button {
+        width: 150px;
+        height: 35px;
+      }
+    }
+  }
+  #exploreTopCategories {
+    .categories {
+      max-width: 100px;
+      height: 80px;
+    }
+    h3 {
+      font-size: 15px;
+    }
+  }
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
+  .cities {
+    img {
+      width: 154px;
+      height: 154px;
+    }
+    h4 {
+      margin-top: 13px;
+    }
+  }
+  .works {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+
+  .groups {
+    max-width: 100%;
+  }
+}
+//========================= 768px =========================
+
+@media screen and (max-width: 768px) {
+  .allPages {
+    padding: 0 30px 30px 30px;
+  }
+  h1 {
+    font-size: 25px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+
+  #search-container input[type="text"],
+  .redBtn,
+  .searchLogo {
+    display: $display-none;
+  }
+  #search-container .english {
+    display: block;
+  }
+  #navSearchFormSmall {
+    @include displayFlex3(center, center, row);
+    gap: 0px;
+    margin: 0 auto;
+    input {
+      width: 300px;
+      min-height: 42px;
+      border: 1px solid gray;
+      padding-left: 37px;
+      border-top-left-radius: 8px;
+      border-bottom-left-radius: 8px;
+      border-right: 0px;
+    }
+    button {
+      max-height: 42px;
+      outline: none;
+      border: none;
+      background-color: #f65858;
+      padding: 11px;
+      border-top-right-radius: 8px;
+      border-bottom-right-radius: 8px;
+      position: relative;
+    }
+    #navSearchIconSmall {
+      position: absolute;
+      left: -292px;
+      top: 8px;
+    }
+  }
+
+  #content-block {
+    flex-direction: column;
+    text-align: center;
+    padding: 20px 5% 20px 0px;
+
+    .image img {
+      max-width: 250px;
+      margin-bottom: 10px;
+    }
+
+    .text {
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 0.875rem;
+      }
+
+      button {
+        font-size: 0.875rem;
+        padding: 8px 16px;
+      }
+    }
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: column;
+    img {
+      max-height: 200px;
+    }
+    h3 {
+      font-size: 12px;
+      padding: 3px;
+    }
+    p {
+      font-size: 10px;
+      padding: 3px;
+    }
+  }
+
+  .card {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    max-width: 100%;
+    gap: 10px;
+    h3 {
+      font-weight: 500;
+    }
+
+    .card-content {
+      justify-content: center;
+      align-items: flex-start;
+      flex-direction: column;
+
+      // max-width: 100%;
+    }
+    img {
+      max-width: 180px;
+    }
+  }
+  #meetup {
+    flex-direction: column-reverse;
+
+    .content-meetup {
+      text-align: center;
+
+      button {
+        width: 130px;
+        height: 30px;
+        font-size: 0.875rem;
+      }
+    }
+
+    .meetupText {
+      margin-bottom: 10px;
+    }
+  }
+  #allCategories {
+    @include displayFlex2(center, center);
+    margin: 0 auto;
+    max-width: 499px;
+    gap: 20px;
+  }
+  .groups {
+    .image img {
+      max-width: 80px;
+      margin-bottom: 5px;
+    }
+  }
+
+  #citiesOnMeetup {
+    margin-bottom: $container-margin-bottom;
+    .cities {
+      margin: 0 auto;
+      max-width: 399px;
+      gap: 18px;
+    }
+  }
+  .smallCities {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  .miami {
+    display: $display-none;
+  }
+
+  #friendships .gridFriendships {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    max-width: 399px;
+  }
+  #footer {
+    .footers-columns {
+      gap: 8%;
+    }
+    .rightSiteFooter {
+      display: $display-none;
+    }
+    .legal a {
+      display: $display-none;
+    }
+  }
+}
+
+@media screen and (max-width: 393px) {
+  html p {
+    font-size: 13px;
+  }
+  .allPages {
+    // padding: 0 20px 20px 20px;
+  }
+  h1 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 18px;
+  }
+
+  #joinBtn {
+    display: $display-none;
+  }
+
+  .heading2 {
+    p {
+      display: $display-none;
+    }
+    img {
+      max-width: 170px;
+    }
+  }
+  .cards {
+    img {
+      max-width: 140px;
+    }
+  }
+
+  #meetup {
+    .logo-meetup {
+      img {
+        max-width: 300px;
+      }
+    }
+    .content-meetup {
+      padding: 20px;
+      button {
+        margin: 20px;
+      }
+    }
+  }
+
+  #meetupWorks {
+    .image,
+    .worksContent {
+      padding: 20px 10px 15px 15px;
+    }
+  }
+
+  #footer {
+    .footers-columns {
+      gap: 3%;
+    }
   }
 }
