--- a/styles/style.scss
+++ b/styles/style.scss
@@ -695,6 +695,7 @@ html {
     }
   }
 }
+//========================= 393px =========================
 
 @media screen and (max-width: 393px) {
   html p {
