--- a/styles/style.css
+++ b/styles/style.css
@@ -718,6 +718,9 @@ html p {
   #meetupWorks .worksContent {
     padding: 20px 10px 15px 15px;
   }
+  #footer {
+    padding: 25px;
+  }
   #footer .footers-columns {
     gap: 3%;
   }
