--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,10 @@ html p {
   background-color: rgba(151, 202, 209, 0.0784313725);
   margin-bottom: 4%;
 }
+.categories h3 {
+  font-weight: 500;
+  font-size: 16px;
+}
 
 #citiesOnMeetup p {
   margin: 16px 0 16px 0;
@@ -264,6 +268,7 @@ html p {
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 64px;
+  text-align: center;
 }
 .cities h4 {
   margin-top: 24px;
@@ -294,8 +299,9 @@ html p {
 .worksContent {
   max-width: 379px;
 }
-.worksContent h4 {
+.worksContent h3 {
   margin-bottom: 16px;
+  font-size: 20px;
 }
 .worksContent p {
   margin-bottom: 16px;
