--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -346,7 +346,7 @@ p {
 
 @media screen and (max-width: 768px) {
   h1 {
-    font-size: 20px;
+    font-size: $font-size20;
   }
   h4 {
     font-size: 12px;
