--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 @mixin iconInlineAlign() {
   vertical-align: middle;
   display: inline-block;
@@ -22,4 +24,12 @@
 @mixin flexAlign($align) {
   display: flex;
   align-items: $align;
+}
+@mixin transistionAndHover() {
+  transition: transform 0.5s ease;
+  &:hover {
+    box-shadow: 0 0 10px rgba(6, 164, 185, 0.5);
+    transform: scale(1.03);
+    cursor: $cursPoint;
+  }
 }
