--- a/styles/style.scss
+++ b/styles/style.scss
@@ -34,22 +34,36 @@ html {
   .logo img {
     height: 37px;
     margin-right: 30px;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
-#search-container input[type="text"] {
-  padding: 10px;
-  border-radius: 5px 0 0 5px;
-  border: 1px solid gray;
-  border-right: $border-none;
+#search-container .searchInput {
+  width: 20vw;
+  padding: 12px 5px 12px 37px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px 0 0 8px;
   outline: none;
-  text-indent: 20px;
-  border-left: 1px solid #ccc;
+  transition: border 0.5s ease;
+}
+#search-container .searchCityInput {
+  width: 20vw;
+  padding: 12px 20px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-left: none;
+  border-right: none;
+  outline: none;
+  transition: border 0.5s ease;
 }
 
 .searchLogo {
   position: absolute;
-  left: 140px;
+  left: 144px;
   top: 1px;
   width: 16px;
 }
@@ -59,9 +73,9 @@ html {
   border: $border-none;
   color: $colorWhite;
   padding: 10px 20px;
-  cursor: pointer;
-  width: 38px;
-  height: 38px;
+  cursor: $cursPoint;
+  width: 42px;
+  height: 42px;
   border-radius: 0 10px 10px 0;
   background-image: url(../accets/images/navMenu/buttonSearch.svg);
   background-repeat: no-repeat;
@@ -69,23 +83,27 @@ html {
 
 #search-container .extra-links a,
 #search-container .extra-links button {
-  margin-left: 7px;
+  margin-left: 8px;
   text-decoration: none;
   color: #333;
 }
 #search-container .extra-links {
   @include displayFlex2(center, center);
+
   button {
     background-color: #00798a;
     border: $border-none;
     color: $colorWhite;
     padding: 10px 20px;
-    cursor: pointer;
+    cursor: $cursPoint;
     border-radius: 8px;
   }
 }
 #navSearchFormSmall {
   display: $display-none;
+}
+.btnTeal {
+  @include transistionAndHover();
 }
 
 //========================= JOIN MEETUP =========================
@@ -115,7 +133,7 @@ html {
     border: $border-none;
     color: $colorWhite;
     padding: 10px 20px;
-    cursor: pointer;
+    cursor: $cursPoint;
     border-radius: 8px;
     font-size: 1rem;
   }
@@ -135,6 +153,7 @@ html {
 .siteRight {
   color: $colorHex;
   margin: 10px;
+  cursor: $cursPoint;
 }
 
 //=====
@@ -152,6 +171,11 @@ html {
 .card {
   max-width: 300px;
   position: relative;
+  border: 1px solid transparent;
+  border-radius: 10px;
+  transition: transform 0.5s ease;
+  outline: none;
+  cursor: $cursPoint;
   h3 {
     font-weight: 600;
     padding: 7px;
@@ -161,6 +185,9 @@ html {
     font-size: $text-size;
     font-weight: 400;
   }
+}
+.card {
+  @include transistionAndHover();
 }
 .goindAndFree {
   @include displayFlex2(start, center);
@@ -198,6 +225,12 @@ html {
     color: $colorWhite;
     border: $border-none;
     border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    &:hover {
+      background-color: #c91e50;
+      transform: scale(1.05);
+    }
   }
 }
 .meetupText {
@@ -207,6 +240,7 @@ html {
 //========================= CATEGORIES =========================
 #exploreTopCategories {
   margin-bottom: $container-margin-bottom;
+
   h2 {
     margin-bottom: 24px;
   }
@@ -217,15 +251,21 @@ html {
   justify-content: space-between;
   max-height: 400px;
   flex-wrap: wrap;
+  gap: 15px;
 }
 .categories {
   @include displayFlex3(center, center, column);
+  @include transistionAndHover();
   text-align: center;
   height: 112px;
   width: 135px;
   background-color: #97cad114;
   margin-bottom: 4%;
+
   h3 {
+    display: flex;
+    max-width: 100px;
+    justify-content: center;
     font-weight: 500;
     font-size: 16px;
   }
@@ -247,7 +287,12 @@ html {
     margin-top: 24px;
   }
 }
-
+.city {
+  transition: transform 0.5s ease;
+}
+.city:hover {
+  transform: scale(1.03);
+}
 //========================= MEETUP WORKS =========================
 
 #meetupWorks {
@@ -285,6 +330,7 @@ html {
   font-weight: 500;
   font-size: $text-size-up;
   color: $colorHex;
+  cursor: $cursPoint;
 }
 
 //========================= FRIENDSHIPS =========================
@@ -315,6 +361,7 @@ html {
 }
 .readMoreText {
   color: $colorHex;
+  cursor: $cursPoint;
 }
 
 //========================= FOOTER =========================
@@ -324,6 +371,30 @@ html {
   color: $colorWhite;
   padding: 3% 7% 3% 7%;
   // text-align: center;\
+}
+.linkIcon {
+  transition: color 0.5s ease;
+  color: #d9d9d9;
+}
+
+#facebook_link:hover .linkIcon {
+  color: #6fb1f3;
+}
+
+#twitter_link:hover .linkIcon {
+  color: #1dabdd;
+}
+
+#youtube_link:hover .linkIcon {
+  color: #f50d0d;
+}
+
+#instagram_link:hover .linkIcon {
+  color: #833ab4ff;
+}
+
+#tiktok_link:hover .linkIcon {
+  color: #04917d;
 }
 
 .footerHead {
@@ -341,11 +412,16 @@ html {
     color: $colorWhite;
     background-color: transparent;
     padding: 10px 25px 10px 14px;
+    transition: all 0.5s ease;
+    &:hover {
+      box-shadow: 0 0 10px rgb(255, 255, 255);
+      transform: scale(1.1);
+    }
   }
 }
 .footers-columns {
   @include flexAlign(start);
-  gap: 25%;
+  gap: 16%;
   flex-wrap: wrap;
   margin: 20px 0 20px 0;
 }
@@ -385,11 +461,9 @@ html {
   gap: 40px;
 }
 
-.leftSiteFooter img,
-.rightSiteFooter img {
-  cursor: pointer;
+.leftSiteFooter svg {
+  margin: 10px;
 }
-
 .legal {
   @include flexAlign(center);
   margin-top: 20px;
