--- a/styles/style2.css
+++ b/styles/style2.css
@@ -36,21 +36,36 @@ p {
 #search-container .logo img {
   height: 37px;
   margin-right: 30px;
+  transition: transform 0.5s ease;
+}
+#search-container .logo img:hover {
+  transform: scale(1.05);
 }
 
-#search-container input[type=text] {
-  padding: 10px;
-  border-radius: 5px 0 0 5px;
-  border: 1px solid gray;
+#search-container .searchInput {
+  width: 20vw;
+  padding: 12px 5px 12px 37px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px 0 0 8px;
+  outline: none;
+  transition: border 0.5s ease;
+}
+
+#search-container .searchCityInput {
+  width: 20vw;
+  padding: 12px 20px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-left: none;
   border-right: none;
   outline: none;
-  text-indent: 20px;
-  border-left: 1px solid #ccc;
+  transition: border 0.5s ease;
 }
 
 .searchLogo {
   position: absolute;
-  left: 140px;
+  left: 144px;
   top: 1px;
   width: 16px;
 }
@@ -61,8 +76,8 @@ p {
   color: white;
   padding: 10px 20px;
   cursor: pointer;
-  width: 38px;
-  height: 38px;
+  width: 42px;
+  height: 42px;
   border-radius: 0 10px 10px 0;
   background-image: url(../accets/images/navMenu/buttonSearch.svg);
   background-repeat: no-repeat;
@@ -70,7 +85,7 @@ p {
 
 #search-container .extra-links a,
 #search-container .extra-links button {
-  margin-left: 7px;
+  margin-left: 8px;
   text-decoration: none;
   color: #333;
 }
@@ -91,6 +106,15 @@ p {
 
 #navSearchFormSmall {
   display: none;
+}
+
+.btnTeal {
+  transition: transform 0.5s ease;
+}
+.btnTeal:hover {
+  box-shadow: 0 0 10px rgba(6, 164, 185, 0.5);
+  transform: scale(1.03);
+  cursor: pointer;
 }
 
 .filter-container {
@@ -140,11 +164,15 @@ p {
   border-radius: 40px;
   background-color: #f6f7f8;
   cursor: pointer;
+  transition: transform 0.5s ease;
 }
 .dropdown-toggle::after {
   content: url(../accets/images/afterFilter.svg);
   vertical-align: middle;
   margin-left: 13px;
+}
+.dropdown-toggle:hover {
+  transform: scale(1.03);
 }
 
 .dropdown-menu {
@@ -190,6 +218,10 @@ p {
   border-right: none;
   border-bottom: none;
   border-radius: initial;
+  transition: transform 0.5s ease;
+}
+.event:hover {
+  transform: scale(1.03);
 }
 .event img {
   max-width: 160px;
@@ -197,7 +229,7 @@ p {
   border-radius: 5px;
 }
 
-.event-details {
+.event .event-details {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -243,6 +275,31 @@ p {
   padding: 3% 7% 3% 7%;
 }
 
+.linkIcon {
+  transition: color 0.5s ease;
+  color: #d9d9d9;
+}
+
+#facebook_link:hover .linkIcon {
+  color: #6fb1f3;
+}
+
+#twitter_link:hover .linkIcon {
+  color: #1dabdd;
+}
+
+#youtube_link:hover .linkIcon {
+  color: #f50d0d;
+}
+
+#instagram_link:hover .linkIcon {
+  color: #833ab4;
+}
+
+#tiktok_link:hover .linkIcon {
+  color: #04917d;
+}
+
 .footerHead {
   display: flex;
   justify-content: start;
@@ -262,12 +319,17 @@ p {
   color: white;
   background-color: transparent;
   padding: 10px 25px 10px 14px;
+  transition: all 0.5s ease;
+}
+.footerHead button:hover {
+  box-shadow: 0 0 10px rgb(255, 255, 255);
+  transform: scale(1.1);
 }
 
 .footers-columns {
   display: flex;
   align-items: start;
-  gap: 25%;
+  gap: 16%;
   flex-wrap: wrap;
   margin: 20px 0 20px 0;
 }
@@ -310,9 +372,17 @@ p {
   gap: 40px;
 }
 
-.leftSiteFooter img,
+.leftSiteFooter svg {
+  margin: 10px;
+}
+
 .rightSiteFooter img {
+  transition: all 0.5s ease;
   cursor: pointer;
+}
+.rightSiteFooter img:hover {
+  box-shadow: 0 0 0 rgb(255, 255, 255);
+  transform: scale(1.1);
 }
 
 .legal {
