--- a/styles/style2.scss
+++ b/styles/style2.scss
@@ -32,22 +32,36 @@ p {
   .logo img {
     height: 37px;
     margin-right: 30px;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
-#search-container input[type="text"] {
-  padding: 10px;
-  border-radius: 5px 0 0 5px;
-  border: 1px solid gray;
-  border-right: $border-none;
+#search-container .searchInput {
+  width: 20vw;
+  padding: 12px 5px 12px 37px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 8px 0 0 8px;
   outline: none;
-  text-indent: 20px;
-  border-left: 1px solid #ccc;
+  transition: border 0.5s ease;
+}
+#search-container .searchCityInput {
+  width: 20vw;
+  padding: 12px 20px;
+  border-right: none;
+  border: 1px solid #d9d9d9;
+  border-left: none;
+  border-right: none;
+  outline: none;
+  transition: border 0.5s ease;
 }
 
 .searchLogo {
   position: absolute;
-  left: 140px;
+  left: 144px;
   top: 1px;
   width: 16px;
 }
@@ -57,9 +71,9 @@ p {
   border: $border-none;
   color: $colorWhite;
   padding: 10px 20px;
-  cursor: pointer;
-  width: 38px;
-  height: 38px;
+  cursor: $cursPoint;
+  width: 42px;
+  height: 42px;
   border-radius: 0 10px 10px 0;
   background-image: url(../accets/images/navMenu/buttonSearch.svg);
   background-repeat: no-repeat;
@@ -67,23 +81,27 @@ p {
 
 #search-container .extra-links a,
 #search-container .extra-links button {
-  margin-left: 7px;
+  margin-left: 8px;
   text-decoration: none;
   color: #333;
 }
 #search-container .extra-links {
   @include displayFlex2(center, center);
+
   button {
     background-color: #00798a;
     border: $border-none;
     color: $colorWhite;
     padding: 10px 20px;
-    cursor: pointer;
+    cursor: $cursPoint;
     border-radius: 8px;
   }
 }
 #navSearchFormSmall {
   display: $display-none;
+}
+.btnTeal {
+  @include transistionAndHover();
 }
 
 .filter-container {
@@ -97,7 +115,6 @@ p {
 }
 
 //========================= MAIN CONTAINER =========================
-
 .eventsMainTopRight {
   h4 {
     margin-bottom: 14px;
@@ -130,10 +147,14 @@ p {
   border-radius: 40px;
   background-color: #f6f7f8;
   cursor: pointer;
+  transition: transform 0.5s ease;
   &::after {
     content: url(../accets/images/afterFilter.svg);
     vertical-align: middle;
     margin-left: 13px;
+  }
+  &:hover {
+    transform: scale(1.03);
   }
 }
 .dropdown-menu {
@@ -174,13 +195,17 @@ p {
   border-right: none;
   border-bottom: none;
   border-radius: initial;
+  transition: transform 0.5s ease;
+  &:hover {
+    transform: scale(1.03);
+  }
   img {
     max-width: 160px;
     max-height: 105px;
     border-radius: 5px;
   }
 }
-.event-details {
+.event .event-details {
   @include displayFlex1(column, 10px);
   margin-left: 10px;
 }
@@ -219,6 +244,30 @@ p {
   padding: 3% 7% 3% 7%;
   // text-align: center;\
 }
+.linkIcon {
+  transition: color 0.5s ease;
+  color: #d9d9d9;
+}
+
+#facebook_link:hover .linkIcon {
+  color: #6fb1f3;
+}
+
+#twitter_link:hover .linkIcon {
+  color: #1dabdd;
+}
+
+#youtube_link:hover .linkIcon {
+  color: #f50d0d;
+}
+
+#instagram_link:hover .linkIcon {
+  color: #833ab4ff;
+}
+
+#tiktok_link:hover .linkIcon {
+  color: #04917d;
+}
 
 .footerHead {
   @include displayFlex3(start, center, row);
@@ -227,7 +276,7 @@ p {
   gap: 10px;
   width: 100%;
   p {
-    font-size: 16px;
+    font-size: $text-size-up;
   }
   button {
     border-radius: 6px;
@@ -235,11 +284,16 @@ p {
     color: $colorWhite;
     background-color: transparent;
     padding: 10px 25px 10px 14px;
+    transition: all 0.5s ease;
+    &:hover {
+      box-shadow: 0 0 10px rgb(255, 255, 255);
+      transform: scale(1.1);
+    }
   }
 }
 .footers-columns {
   @include flexAlign(start);
-  gap: 25%;
+  gap: 16%;
   flex-wrap: wrap;
   margin: 20px 0 20px 0;
 }
@@ -248,7 +302,7 @@ p {
   margin-bottom: 20px;
   h4 {
     margin-bottom: 10px;
-    font-size: 16px;
+    font-size: $text-size-up;
     font-weight: 400;
   }
   ul {
@@ -279,11 +333,17 @@ p {
   gap: 40px;
 }
 
-.leftSiteFooter img,
-.rightSiteFooter img {
-  cursor: pointer;
+.leftSiteFooter svg {
+  margin: 10px;
 }
-
+.rightSiteFooter img {
+  transition: all 0.5s ease;
+  cursor: $cursPoint;
+  &:hover {
+    box-shadow: 0 0 0 rgb(255, 255, 255);
+    transform: scale(1.1);
+  }
+}
 .legal {
   @include flexAlign(center);
   margin-top: 20px;
